fixed signup tooltip alignment

--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -13,6 +13,7 @@
     border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
     height: 100%;
     width: 0%;
+    margin-top: 1rem;
 }
 
 /* Tooltip text */
